--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@hookform/resolvers": "^3.0.0",
     "@types/node": "^18.15.11",
     "@types/react-datepicker": "^4.10.0",
@@ -25,6 +26,7 @@
     "dayjs": "^1.11.7",
     "framer-motion": "^10.10.0",
     "lodash": "^4.17.21",
+    "mdb-react-ui-kit": "^6.0.0",
     "path": "^0.12.7",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
