--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@chakra-ui/icon": "^3.0.16",
     "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.4.6",
+    "@chakra-ui/toast": "^6.1.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@hookform/resolvers": "^3.0.0",
     "@types/node": "^18.15.11",
     "@types/react-datepicker": "^4.10.0",
+    "@types/three": "^0.150.0",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "framer-motion": "^10.10.0",
@@ -32,6 +34,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-promise-tracker": "^2.1.1",
@@ -39,6 +42,8 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.2",
+    "react-toastify": "^9.1.2",
+    "three": "^0.151.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
