--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@hookform/resolvers": "^3.0.0",
     "@types/node": "^18.15.11",
     "@types/react-datepicker": "^4.10.0",
-    "@types/three": "^0.150.0",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "framer-motion": "^10.10.0",
@@ -34,7 +33,6 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-promise-tracker": "^2.1.1",
@@ -42,13 +40,16 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.2",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.2",
+    "slick-carousel": "^1.8.1",
     "three": "^0.151.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
