--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^10.10.0",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^6.0.0",
+    "moment": "^2.29.4",
     "path": "^0.12.7",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
@@ -37,6 +38,7 @@
     "react-icons": "^4.8.0",
     "react-promise-tracker": "^2.1.1",
     "react-query": "^3.39.3",
+    "react-rating-stars-component": "^2.2.0",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.2",
