--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^18.15.11",
     "@types/react-datepicker": "^4.10.0",
     "axios": "^1.3.4",
+    "chakra-ui-date-input": "^1.0.0",
     "dayjs": "^1.11.7",
     "framer-motion": "^10.10.0",
     "lodash": "^4.17.21",
