--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/icon": "^3.0.16",
     "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.4.6",
+    "@chakra-ui/select": "^2.0.19",
     "@chakra-ui/toast": "^6.1.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
