--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-select": "^5.7.2",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.2",
+    "sass": "^1.62.0",
     "slick-carousel": "^1.8.1",
     "three": "^0.151.2",
     "zod": "^3.21.4"
