--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-datepicker": "^4.10.0",
     "axios": "^1.3.4",
     "chakra-ui-date-input": "^1.0.0",
+    "chakra-ui-steps": "^2.1.0",
     "dayjs": "^1.11.7",
     "framer-motion": "^10.10.0",
     "lodash": "^4.17.21",
@@ -34,6 +35,7 @@
     "path": "^0.12.7",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-credit-cards": "^0.8.3",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
