--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@hookform/resolvers": "^3.0.0",
+    "@tanstack/react-table": "^8.9.1",
     "@types/node": "^18.15.11",
     "@types/react-datepicker": "^4.10.0",
+    "antd": "^5.4.7",
+    "apexcharts": "^3.40.0",
     "axios": "^1.3.4",
     "chakra-ui-date-input": "^1.0.0",
     "chakra-ui-steps": "^2.1.0",
@@ -35,6 +38,7 @@
     "path": "^0.12.7",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-credit-cards": "^0.8.3",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
@@ -44,7 +48,7 @@
     "react-query": "^3.39.3",
     "react-rating-stars-component": "^2.2.0",
     "react-router": "^6.10.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "6.10.0",
     "react-select": "^5.7.2",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.2",
